<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Androsens 2</string>
    <string name="start_activity_name">Sensormanager</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Sensors</string>
    <string name="title_section2">Gps</string>
    <string name="title_section3">Gps NMEA</string>
    <string name="SENSORINFO_TYPE_ACCELEROMETER">ACCELEROMETER</string>
    <string name="SENSORINFO_TYPE_ALL">ALL</string>
    <string name="SENSORINFO_TYPE_AMBIENT_TEMPERATURE">AMBIENT_TEMPERATURE</string>
    <string name="SENSORINFO_TYPE_GAME_ROTATION_VECTOR">GAME_ROTATION_VECTOR</string>
    <string name="SENSORINFO_TYPE_GEOMAGNETIC_ROTATION_VECTOR">GEOMAGNETIC_ROTATION_VECTOR</string>
    <string name="SENSORINFO_TYPE_GRAVITY">GRAVITY</string>
    <string name="SENSORINFO_TYPE_GYROSCOPE">GYROSCOPE</string>
    <string name="SENSORINFO_TYPE_GYROSCOPE_UNCALIBRATED">GYROSCOPE_UNCALIBRATED</string>
    <string name="SENSORINFO_TYPE_LIGHT">LIGHT</string>
    <string name="SENSORINFO_TYPE_LINEAR_ACCELERATION">LINEAR_ACCELERATION</string>
    <string name="SENSORINFO_TYPE_MAGNETIC_FIELD">MAGNETIC_FIELD</string>
    <string name="SENSORINFO_TYPE_MAGNETIC_FIELD_UNCALIBRATED">TYPE_MAGNETIC_FIELD_UNCALIBRATED</string>
    <string name="SENSORINFO_TYPE_ORIENTATION">ORIENTATION</string>
    <string name="SENSORINFO_TYPE_PRESSURE">PRESSURE</string>
    <string name="SENSORINFO_TYPE_PROXIMITY">PROXIMITY</string>
    <string name="SENSORINFO_TYPE_RELATIVE_HUMIDITY">RELATIVE_HUMIDITY</string>
    <string name="SENSORINFO_TYPE_ROTATION_VECTOR">ROTATION_VECTOR</string>
    <string name="SENSORINFO_TYPE_SIGNIFICANT_MOTION">SIGNIFICANT_MOTION</string>
    <string name="SENSORINFO_TYPE_STEP_COUNTER">STEP_COUNTER</string>
    <string name="SENSORINFO_TYPE_STEP_DETECTOR">STEP_DETECTOR</string>
    <string name="SENSORINFO_TYPE_TEMPERATURE">TEMPERATURE</string>
    <string name="SENSORINFO_TYPE_UNKNOWN">UNKNOWN</string>
    <string name="preferences_contactDeveloperCat">Developer</string>
    <string name="preferences_contactDeveloperTitel">Contact developer</string>
    <string name="preferences_contactDeveloperDescription">E-Mail christian.d.schneider@googlemail.com</string>
    <string name="preferences_rateAppTitel">Rate</string>
    <string name="preferences_rateAppDescription">Rate this app in google play store</string>
    <string name="preferences_logDirectoryCat">Log</string>
    <string name="preferences_logDirectoryTitel">Log folder</string>
    <string name="preferences_logDirectoryDescription">Log files will be created in this folder</string>
    <string name="preferences_sensorDelayCat">Sensor</string>
    <string name="preferences_sensorDelayTitle">Sensor delay</string>
    <string name="preferences_sensorDelaySummary">Defines how fast sensor updates will be performed</string>
    <string name="preferences_sensorLowpassTitle">Low-pass filter</string>
    <string name="preferences_sensorLowpassSummary">Smoothness value for low-pass filter in GPS view. This will fix the jitter of the gps compass</string>
    <string name="preferences_licenseCat">License</string>
    <string name="preferences_licenseTitle">License</string>
    <string name="preferences_licenseDescription">Displays license information</string>
    <string name="sensorchartactivity_switchLog">Save data to sdcard</string>
    <string name="sensorchartactivity_textView_log">Log</string>
    <string name="gpsfragment_tv_gpssattitle">GPS PRN</string>
    <string name="gpsfragment_tv_glonassattitle">GLONASS PRN</string>
    <string name="gpsfragment_tv_latitude_title">Latitude</string>
    <string name="gpsfragment_tv_altitude_title">Altitude</string>
    <string name="gpsfragment_tv_longitude_title">Longitude</string>
    <string name="gpsnmeafragment_btn_clear">clear</string>
    <string name="gpsnmeafragment_tv_active_title">active</string>
    <string name="title_activity_license">LicenseActivity</string>
    <string name="license_activity_gpl_assets_name">default-gpl.txt</string>

</resources>
